missing api-ms-win-crt-runtime-l1-1-0-dll make sure your machine
has the latest Windows patches and/or download this:

https://www.microsoft.com/en-us/download/details.aspx?id=48145

This might also help with other hard crashes.

If this does not help, or if you see a black screen, try starting Mnemosyne
with the --qt-opengl=desktop command line argument.)


Mnemosyne 2.7.2:

- Enabled Icelandic text-to-speech.
- Exposed more functionality of libmnemosyne to scripting programs.
- More robust detection of Latex on OSX (patch by Devin Howard).
- Update example plugin to change keyboard shortcuts (requested by Garrison
  Taylor)


Mnemosyne 2.7.1: 2020-02-20


- Improved Google Translate results.
- Fixed a regression in the sync protocol when Mnemosyne had warned about
  learning too many new cards.
- Improved support for OpenGL emulation libraries on older hardware.
- No longer give a Matplotlib warning when plotting statistics.
- Many cleanups in the code by Cole Robinson.
- Improve Python 3.8 compatibility (patch by hal50000).


Mnemosyne 2.7: 2019-11-19

- Added Google text-to-speech and translate. To enable, first associate a
  language to a card type using "Cards - Manage card types...". You can then
  right-click on a text field when adding or editing cards to insert a
  translation or a sound file.
- Mnemosyne is now a 64-bit application only, and the Windows version is
  bundled with Python 3.7, PyQt 5.13.1, matplotlib 3.1.1.
- Use system language as default language (code by Adam Papai).
- Only warn once per day about the number of cards you learned, even if you
  open and close Mnemosyne inbetween (code by Adam Papai).
- More error checking when uploading science logs. To avoid missing files from
  the past, Mnemosyne will reupload all of your old logs as well.
- Disallow starting a headless sync server in case no password is set up (patch
  by Marcin Mielniczuk).
- Reenable right-click menu on review widget to allow for copying text.