@@ -85,7 +85,7 @@ class GradesCriterionPlugin(Plugin):
     name = "Activity criterion example"
     description = "Example plugin for grade-based criterion."
     components = [GradesCriterion, GradesCriterionApplier, GradesCriterionWdgt]
-    supported_API_level = 2
+    supported_API_level = 3
 
 from mnemosyne.libmnemosyne.plugin import register_user_plugin
 register_user_plugin(GradesCriterionPlugin)
